history tab few changes

--- a/pmd/styles/default/style1.css
+++ b/pmd/styles/default/style1.css
@@ -409,90 +409,96 @@ position: fixed;
 top: 50px;
 right: 0;
 display: none;
-background: #000000;
-border:1px solid #111111;
--moz-border-radius-topleft: 20px;
--webkit-border-top-left-radius: 20px;
--moz-border-radius-bottomleft: 20px;
--webkit-border-bottom-left-radius: 20px;
-width: 330px;
+background: #FFF;
+border:1px solid #F5F5F5;
+width: auto;
 height: auto;
-padding: 30px 30px 30px 130px;
-filter: alpha(opacity=85);
-opacity: .85;
+padding: 30px 170px 30px 30px;
 color:#FFF;
-
-}
-
-.panel p{
-margin: 0 0 15px 0;
-padding: 0;
-color: #cccccc;
-}
-
-.panel a, .panel a:visited{
-margin: 0;
-padding: 0;
-color: #9FC54E;
-text-decoration: none;
-border-bottom: 1px solid #9FC54E;
-}
-
-.panel a:hover, .panel a:visited:hover{
-margin: 0;
-padding: 0;
-color: #ffffff;
-text-decoration: none;
-border-bottom: 1px solid #ffffff;
-}
-.panel tr {
-	color:#CCC;
-	background-color:#B9E24B;
+z-index:99;
 }
 
 a.trigger{
 position: fixed;
 text-decoration: none;
-top: 80px; right: 0;
+top: 60px; right: 0;
 font-size: 16px;
-letter-spacing:-1px;
 font-family: verdana, helvetica, arial, sans-serif;
 color:#fff;
-padding: 20px 40px 20px 15px;
+padding: 10px 40px 10px 15px;
 font-weight: 700;
 background:#333333 url(images/plus.png) 85% 55% no-repeat;
 border:1px solid #444444;
--moz-border-radius-topleft: 20px;
--webkit-border-top-left-radius: 20px;
--moz-border-radius-bottomleft: 20px;
--webkit-border-bottom-left-radius: 20px;
--moz-border-radius-bottomright: 0px;
--webkit-border-bottom-right-radius: 0px;
 display: block;
 }
 
 a.trigger:hover{
 position: fixed;
 text-decoration: none;
-top: 80px; right: 0;
+top: 60px; right: 0;
 font-size: 16px;
-letter-spacing:-1px;
 font-family: verdana, helvetica, arial, sans-serif;
-color:#fff;
-padding: 20px 40px 20px 20px;
+color:#080808;
+padding: 10px 40px 10px 15px;
 font-weight: 700;
-background:#222222 url(images/plus.png) 85% 55% no-repeat;
-border:1px solid #444444;
--moz-border-radius-topleft: 20px;
--webkit-border-top-left-radius: 20px;
--moz-border-radius-bottomleft: 20px;
--webkit-border-bottom-left-radius: 20px;
--moz-border-radius-bottomright: 0px;
--webkit-border-bottom-right-radius: 0px;
+background:#fff696 url(images/plus.png) 85% 55% no-repeat;
+border:1px solid #999;
 display: block;
 }
 
 a.active.trigger {
 background:#222222 url(images/minus.png) 85% 55% no-repeat;
+z-index:999;
 }
-a.test { font-weight: bold; color:#C06; }
+
+a.active.trigger:hover {
+background:#fff696 url(images/minus.png) 85% 55% no-repeat;
+z-index:999;
+}
+
+h2.tiger{
+	background-image: url(images/Header.png);
+    background-repeat: repeat-x;
+    padding: 1px;
+    font-weight: bold;
+	font-size:14px;
+	padding: 50 20 50 20px;
+	margin: 0 0 5px 0;
+	float: left;
+	color : #333;
+	text-align: center;
+}
+
+h2.tiger a {
+	text-align: center;
+	color : #333;
+	display: block;
+}
+
+h2.tiger a:hover {  
+	color: #ccc; 
+}
+
+h2.active {
+	background-image: url(images/Header.png);
+    background-repeat: repeat-x;
+    padding: 1px;
+	background-position: left bottom;
+} /*--When toggle is tigered, it will shift the image to the bottom to show its "opened" state--*/
+
+.toggle_container {
+	margin: 0 0 5px;
+	padding: 0;
+	border-top: 1px solid #d6d6d6;
+	background: #83B0B8 ;
+	overflow: hidden;
+	font-size: 1.2em;
+	clear: both;
+}
+
+.toggle_container .block {
+	background-color: #E7E7E7;
+	padding:40 15 40 15px; /*--Padding of Container--*/
+	border:1px solid #999;
+	color:#000;
+}
