--- a/pmd/styles/default/style1.css
+++ b/pmd/styles/default/style1.css
@@ -516,3 +516,68 @@ h2.active {
 	text-align: center;
 	background-color: #DBE4E8;
 }
+
+#filter {
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: #CCA;
+	z-index:10;
+	opacity:0.5;
+	filter: alpha(opacity=50);
+}
+
+#box {
+	display: none;
+	position: absolute;
+	top: 20%;
+	left: 30%;
+	width: 500px;
+	height: 220px;
+	padding: 48px;
+	margin:0;
+	border: 1px solid black;
+	background-color: white;
+	z-index:101;
+	overflow: visible;
+}
+
+#boxtitle {
+	position:absolute;
+	float:center;
+	top:0;
+	left:0;
+	width:593px;
+	height:20px;
+	padding:0;
+	padding-top:4px;
+	left-padding:8px;
+	margin:0;
+	border-bottom:4px solid #3CF;
+	background-color: #D0DCE0; //#09c;
+	color:black;
+	font-weight:bold;
+	padding-left: 2px;
+	font-family:"Times New Roman", Times, serif;
+	font-size:16px;
+	text-align:left;
+}
+
+#tblfooter {
+	background-color: D3DCE3;
+	float: right;
+	padding-top:10px;
+	color: black;
+	font-weight: normal;
+}
+
+input.btn {
+	color:#333; 
+	font: bold 84%'trebuchet ms',helvetica,sans-serif; 
+	background-color: #D0DCE0; 
+}
+
+
